[gd_scene load_steps=8 format=2]

[ext_resource path="res://MiscRelated/GUI_Category_Related/BaseTowerSpecificInfoPanel/BaseTowerSpecificInfoPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://MiscRelated/GUI_Category_Related/AdvancedButton/AdvancedButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://TowerRelated/Color_Blue/Orb/Orb_InfoPanel/Orb_InfoPanel_BodyBackground.png" type="Texture" id=3]
[ext_resource path="res://TowerRelated/Color_Blue/Orb/Orb_InfoPanel/Orb_InfoPanel_StickyIcon.png" type="Texture" id=4]
[ext_resource path="res://TowerRelated/Color_Blue/Orb/Orb_InfoPanel/Orb_InfoPanel_RayIcon.png" type="Texture" id=5]
[ext_resource path="res://TowerRelated/Color_Blue/Orb/Orb_InfoPanel/Orb_InfoPanel_StarsIcon.png" type="Texture" id=6]
[ext_resource path="res://TowerRelated/Color_Blue/Orb/Orb_InfoPanel/Orb_InfoPanel.gd" type="Script" id=7]

[node name="BaseTowerSpecificInfoPanel" instance=ExtResource( 1 )]
size_flags_horizontal = 6
script = ExtResource( 7 )

[node name="VBoxContainer" parent="." index="0"]
margin_bottom = 50.0
size_flags_horizontal = 6

[node name="MarginContainer" parent="VBoxContainer/HeaderMarginer/MarginContainer" index="1"]
margin_left = 11.0
margin_right = 39.0

[node name="Label" parent="VBoxContainer/HeaderMarginer/MarginContainer/MarginContainer" index="0"]
margin_right = 28.0
text = "Attacks"

[node name="BodyMarginer" parent="VBoxContainer" index="2"]
margin_bottom = 49.0
size_flags_horizontal = 6

[node name="BodyBackground" type="TextureRect" parent="VBoxContainer/BodyMarginer" index="0"]
margin_right = 110.0
margin_bottom = 35.0
texture = ExtResource( 3 )
stretch_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/BodyMarginer" index="1"]
margin_right = 110.0
margin_bottom = 35.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/BodyMarginer/MarginContainer" index="0"]
margin_left = 7.0
margin_top = 4.0
margin_right = 102.0
margin_bottom = 31.0
size_flags_horizontal = 6
custom_constants/separation = 7

[node name="StickyIcon" parent="VBoxContainer/BodyMarginer/MarginContainer/HBoxContainer" index="0" instance=ExtResource( 2 )]
margin_right = 27.0
margin_bottom = 27.0
texture_normal = ExtResource( 4 )

[node name="StarsIcon" parent="VBoxContainer/BodyMarginer/MarginContainer/HBoxContainer" index="1" instance=ExtResource( 2 )]
margin_left = 34.0
margin_right = 61.0
margin_bottom = 27.0
texture_normal = ExtResource( 6 )

[node name="RayIcon" parent="VBoxContainer/BodyMarginer/MarginContainer/HBoxContainer" index="2" instance=ExtResource( 2 )]
margin_left = 68.0
margin_right = 95.0
margin_bottom = 27.0
texture_normal = ExtResource( 5 )

[node name="BottomBorder" parent="VBoxContainer" index="3"]
margin_top = 49.0
margin_bottom = 50.0
[connection signal="pressed_mouse_event" from="VBoxContainer/BodyMarginer/MarginContainer/HBoxContainer/StickyIcon" to="." method="_on_StickyIcon_pressed_mouse_event"]
[connection signal="pressed_mouse_event" from="VBoxContainer/BodyMarginer/MarginContainer/HBoxContainer/StarsIcon" to="." method="_on_StarsIcon_pressed_mouse_event"]
[connection signal="pressed_mouse_event" from="VBoxContainer/BodyMarginer/MarginContainer/HBoxContainer/RayIcon" to="." method="_on_RayIcon_pressed_mouse_event"]
